@@ -32,6 +32,8 @@
 \RequirePackage{parskip}
 % For parsed-literal blocks.
 \RequirePackage{alltt}
+% Display "real" single quotes in literal blocks.
+\RequirePackage{upquote}
 
 % Redefine these colors to your liking in the preamble.
 \definecolor{TitleColor}{rgb}{0.126,0.263,0.361}
